--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,37 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5 {
-  color: #000;
+  color: #ffffff;
   font-family: "Josefin Sans", arial, sans-serif;
+}
+
+/* Main content */
+.service-overflow,
+.main-content {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+}
+.main-content {
+    min-height: 750px;
+    color: white;
+    background-image: url('./assets/images/1.jpg');
+}
+@media only screen and (max-width: 768px){
+    .main-content {
+        margin-top: 65px;
+        padding-top: 70px;
+    }
 }
