--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12 col-sm-12 col-xs-12">
       <nav class="navbar fixed-top navbar-expand-lg we-menu navbar-light ">
-          <a class="navbar-brand we-logo" href="">WeConnect</a>
+          <a class="navbar-brand we-logo" href="">Biaz</a>
           <button class="navbar-toggler we-toggler" type="button" data-toggle="collapse"
                   data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                   aria-expanded="false" aria-label="Toggle navigation">
@@ -11,8 +11,8 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="">Signup</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Login</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="signup">Signup</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
             </ul>
           </div>
       </nav>
