--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-4 col-sm-12 col-xs-12">
               <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                  <h4>WeConnect</h4>
+                  <h4>Biaz</h4>
                   <p class="landing-content">
                       Connect with a vibrant, International business network by sign-up in
                       <i>WeConnect</i> today for <strong>FREE</strong>!!!
