--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,12 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" routerLink="signup">Signup</a></li>
+                    <li class="nav-item"><a class="nav-link" routerLink="/business-list">business-list</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/signup">Signup</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
             </ul>
           </div>
       </nav>
   </div>
 </div>
-<main class="main-content">
-  <router-outlet></router-outlet>
-</main>
+<router-outlet></router-outlet>
